--- a/ToDo_App/index.html
+++ b/ToDo_App/index.html
@@ -3,27 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>To Do App | JS</title>
 </head>
 <body>
     <div class="container">
         <div class="avatar-div">
-            <h1>Hello User!</h1>
-            <p>You have <span>4</span> tasks for today!</p>
-            <img src="images/avatar.png" alt="Avatar Image">
+            <img src="cat-avatar.jpg" alt="Avatar Image">
+            <p><span class="lg-text">Good Morning☀️</span><br>
+            You have <span class="task-count">4</span> tasks for today!</p>
+            <div class="add-task-btn">➕</div>
         </div>
         <div class="tasks-div">
             <div class="task">
                 <input type="checkbox">
-                <p>Do the laundry</p>
+                <p class="task-text">Do the laundry</p>
             </div>
             <div class="task">
                 <input type="checkbox">
-                <p>Do the laundry</p>
+                <p class="task-text">Do the laundry</p>
             </div>
             <div class="task">
                 <input type="checkbox">
-                <p>Do the laundry</p>
+                <p class="task-text">Do the laundry</p>
+            </div>
+            <div class="task">
+                <input type="checkbox">
+                <p class="task-text">Do the laundry</p>
+            </div>
+            <div class="task">
+                <input type="checkbox">
+                <p class="task-text">Do the laundry</p>
             </div>
         </div>
     </div>
