--- a/ToDo_App/index.html
+++ b/ToDo_App/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-
-    <title>To Do App | JS</title>
+    <title>To-Do App | JS</title>
 </head>
 
 <body>
@@ -15,24 +14,27 @@
         <div class="avatar-div">
             <img class="avatar" src="cat-avatar.jpg" alt="Avatar Image">
             <p><span class="lg-text">Good Morning☀️</span><br>
-                You have <span class="task-count">4</span> tasks for today!</p>
-            <div class="add-task-btn"><i class="fa-solid fa-plus"></i></div>
+                You have <span class="task-count">4 tasks</span> for today!</p>
+            <button class="add-task-btn"><i class="fa-solid fa-plus"></i></button>
         </div>
         <div class="tasks-div">
             <div class="task">
                 <input type="checkbox">
                 <p class="task-text">Go to the gym</p>
-                <div class="x-icon"><i class="fa-solid fa-xmark" style="font-size: 1.1em; color: rgb(173, 173, 173);"></i></div>
+                <div class="x-icon"><i class="fa-solid fa-xmark"
+                        style="font-size: 1.1em; color: rgb(173, 173, 173);"></i></div>
             </div>
             <div class="task">
                 <input type="checkbox">
                 <p class="task-text">Do the laundry</p>
-                <div class="x-icon"><i class="fa-solid fa-xmark" style="font-size: 1.1em; color: rgb(173, 173, 173);"></i></div>
+                <div class="x-icon"><i class="fa-solid fa-xmark"
+                        style="font-size: 1.1em; color: rgb(173, 173, 173);"></i></div>
             </div>
             <div class="task">
                 <input type="checkbox">
                 <p class="task-text">Feed my cat</p>
-                <div class="x-icon"><i class="fa-solid fa-xmark" style="font-size: 1.1em; color: rgb(173, 173, 173);"></i></div>
+                <div class="x-icon"><i class="fa-solid fa-xmark"
+                        style="font-size: 1.1em; color: rgb(173, 173, 173);"></i></div>
             </div>
         </div>
     </div>
