--- a/memory_cards/index.html
+++ b/memory_cards/index.html
@@ -10,59 +10,28 @@
     <div class="container">
         <h1>Cards Matching Game✨</h1>
         <div class="grid-container">
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
-            <div class="card">
-                <div class="hidden-icon"></div>
-            </div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
         </div>
         <footer class="attribution">
             &copy;2024 created by <a href="https://github.com/SamahTT">Samah.</a>
         </footer>
     </div>
-    
+    <script src="script.js">
+    </script>
 </body>
 </html>
